<?xml version="1.0"?>
<package format="2">
  <name>mm_description</name>
  <version>0.0.0</version>
  <description>The mm_description package</description>
  <maintainer email="pradeepr@todo.todo">pradeepr</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>

  <!-- <exec_depend>gazebo_plugins</exec_depend> -->
  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
  <!-- <exec_depend>hector_gazebo_plugins</exec_depend> -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
