<?xml version="1.0"?>
<package>
  <name>mm_description</name>
  <version>0.3.1</version>
  <description>mobile manipulator URDF description</description>

  <author email="sthakar@usc.edu">Shantanu Thakar</author>
  <author email="pradeepunique1989@gmail.com">Pradeep Rajendran</author>

  <maintainer email="sthakar@usc.edu">Shantanu Thakar</maintainer>
  <maintainer email="pradeepunique1989@gmail.com">Pradeep Rajendran</maintainer>



  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx</run_depend>

  <export>
  </export>
</package>
